Time selectors no longer go offscreen, fixed flicking with start/end time

--- a/papukaaniApp/static/papukaani/css/general.css
+++ b/papukaaniApp/static/papukaani/css/general.css
@@ -172,11 +172,16 @@ body {
 }
 
 #playLabel {
-    padding-top: 7px;
+    float: left;
 }
 
 #playLabel_end {
-    padding-top: 7px;
+    float: right;
+}
+
+.secondCol label {
+    font-weight: normal;
+    margin: 5px 0 0 0;
 }
 
 #speedLabel {
@@ -447,6 +452,11 @@ code {
 .secondCol {
     float: left;
     width: calc(100% - 200px);
+}
+
+#public .ui-datepicker {
+    position: relative !important;
+    top: -570px !important;
 }
 
 .birdrow {
